--- a/.github/workflows/branch_checkout.yml
+++ b/.github/workflows/branch_checkout.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: abystoma/external-workflow
-          ref: branch
+          branch: branch
           # If the external repository is private, you may need to provide a token:
           # token: ${{ secrets.GITHUB_TOKEN }}
       
